[tool.poetry]
name = "tweetme"
version = "0.1.0"
description = ""
authors = ["Carlos Kidman"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
tweepy = "^3.9.0"
googletrans = "^3.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.4"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
